--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# This is an example .env file for a Hardhat project.
-SEPOLIA_URL=https://sepolia.infura.io/v3/YOUR_PROJECT_ID
+# THIS IS AN EXAMPLE FILE
+ALCHEMY_API_KEY=https://sepolia.infura.io/v3/YOUR_PROJECT_ID
 PRIVATE_KEY=your_private_key_here
 ETHERSCAN_API_KEY=your_etherscan_api_key
 PINATA_API_KEY=your_pinata_api_key
