--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "dotenv": "^17.2.0",
     "ethers": "^6.15.0",
     "hardhat": "^2.25.0",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^2.3.0",
+    "istanbul-reports": "^3.1.7",
+    "nyc": "^17.1.0",
     "solidity-coverage": "^0.8.16",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
