--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20.19.6",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
 }
