--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.525.0",
     "next": "^14.2.30",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.47.0",
