--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "ethers": "^6.15.0",
     "hardhat": "^2.25.0",
     "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-deploy": "^1.0.4",
+    "hardhat-deploy-ethers": "^0.4.2",
     "hardhat-gas-reporter": "^2.3.0",
     "istanbul-reports": "^3.1.7",
     "nyc": "^17.1.0",
